--- a/LP2Soft/Home/frmHome.resx
+++ b/LP2Soft/Home/frmHome.resx
@@ -195,4 +195,7 @@
         r53TXXQ9dM2/I7Ze11VE5AtfNUaQOx/ecwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolTipHome.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
