--- a/LP2Soft/Properties/Resources.resx
+++ b/LP2Soft/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="filtrar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\filtrar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="revision-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\revision-regular-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="campus-pucp-cia-letras-2020_03-1920x1080-1 - copia" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\campus-pucp-cia-letras-2020_03-1920x1080-1 - copia.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -177,6 +180,9 @@
   </data>
   <data name="heart_empty_icon_178700" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\heart_empty_icon_178700.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="configuraciones (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\configuraciones (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="chevrons-right-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\chevrons-right-regular-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -259,9 +265,6 @@
   <data name="Logo_INFunables" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_INFunables.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="error-circle-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\error-circle-regular-241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -289,6 +292,9 @@
   <data name="calendar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\calendar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="star-solid-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\star-solid-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="chevrons-up-solid-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\chevrons-up-solid-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -307,8 +313,8 @@
   <data name="FreedyPaz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FreedyPaz.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="configuraciones (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\configuraciones (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="error-circle-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\error-circle-regular-241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="upload-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\upload-regular-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -337,7 +343,7 @@
   <data name="share-alt-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\share-alt-regular-241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="star-solid-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\star-solid-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="send-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\send-regular-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
